--- a/src/content/blog/first-spigot-plugin.mdx
+++ b/src/content/blog/first-spigot-plugin.mdx
@@ -1,14 +1,10 @@
 ---
-title: My first Spigot Plugin
+title: "Journey into Spigot: Creating My First Plugin"
 date: 2022-08-13
 author: Adam B
-image:
-  {
-    src: "/assets/images/posts/hq-background.png",
-    alt: "A clean background image.",
-    aspect_ratio: { x: 1, y: 0.75 },
-  }
-description: Here's a post about me trying to learn spigot by making my first plugin. This is mostly documentation for myself.
+tags: Spigot, Minecraft, Java, IntelliJ, Plugin Development
+image: { src: "/assets/images/posts/first-spigot-plugin/tech-background.jpg", alt: "Photo by Ales Nesetril on Unsplash", aspect_ratio: { x: 1.5, y: 1 } }
+description: An introspective account of my journey to learn Spigot by creating my first plugin. This post serves as a reflection and guide for those embarking on a similar path.
 draft: false
 category: Coding
 ---
@@ -16,82 +12,67 @@ category: Coding
 import Link from "../../components/Link.astro";
 import { Image, Picture } from "@astrojs/image/components";
 
-# New horizons.
+# A New Journey
 
-So...
-Step one I guess?
+Ready for embarkation, let's begin.
 
-## Step 1 Installing plugins
+## Step 1: Installing Essential Plugins
 
-When deciding that I wanted to tinker with Minecraft Plugins in java I first had to decide what <Link href="https://en.wikipedia.org/wiki/Integrated_development_environment" text="IDE"/> to use.
+In my quest to delve into the realm of creating Minecraft Plugins using Java, my first crucial decision was choosing an appropriate <Link href="https://en.wikipedia.org/wiki/Integrated_development_environment" text="IDE" />.
 
-I chose <Link href="https://www.jetbrains.com/idea/" text="IntelliJ"/> because it is free for personal use, has a nice dark theme, and has a huge library of plugins. Speaking of plugins, to assist me on my journey I downloaded the following;
+I opted for <Link href="https://www.jetbrains.com/idea/" text="IntelliJ"/>. Its free accessibility for personal use, aesthetic dark theme, and extensive library of plugins proved too enticing to resist. In aid of this journey, I downloaded several plugins:
 
-- <Link
-    href="https://plugins.jetbrains.com/plugin/10044-atom-material-icons"
-    text="Atom Material Icons"
-  />
-- <Link
-    href="https://plugins.jetbrains.com/plugin/8006-material-theme-ui"
-    text="Material Theme UI"
-  />
-- <Link
-    href="https://plugins.jetbrains.com/plugin/8327-minecraft-development"
-    text="Minecraft Development"
-  />
-- <Link
-    href="https://plugins.jetbrains.com/plugin/8575-nyan-progress-bar"
-    text="Nyan Progress Bar"
-  /> (Because why not?)
+- <Link href="https://plugins.jetbrains.com/plugin/10044-atom-material-icons" text="Atom Material Icons" />
+- <Link href="https://plugins.jetbrains.com/plugin/8006-material-theme-ui" text="Material Theme UI" />
+- <Link href="https://plugins.jetbrains.com/plugin/8327-minecraft-development" text="Minecraft Development" />
+- <Link href="https://plugins.jetbrains.com/plugin/8575-nyan-progress-bar" text="Nyan Progress Bar" /> (Because why not?)
 
-## Step 2 Creating A Project
+## Step 2: Building A Project
 
-Using the Minecraft Development plugin I can generate a project with everything pre-setup for working with Spigot. Here I select the Spigot Plugin option so the plugin will use that specific API.
+Using the Minecraft Development plugin I was able to generate a ready-to-use project, designed specifically for working with Spigot. The plugin provides a wizard to guide you through the process of creating a new project.
 
-![Picking API](/assets/images/posts/first-spigot-plugin/chooseapi.png)
+![Choosing API](/assets/images/posts/first-spigot-plugin/chooseapi.png)
 
-Here I learned that it's best practice to use your TLD then website name as your GroupId and the plugin's name as the ArtifactID so I entered `dev.lerndmina` & `exampleplugin`.
-I also decided to use Maven as my build tool because the majority of tutorials use maven...
+To adhere to software engineering best practices, I used my Top-Level Domain (TLD) and website name for the GroupId and coined the name of the plugin as ArtifactID, yielding `dev.lerndmina` & `exampleplugin`. I chose Maven as my build tool, leaning on the fact that most tutorials utilize it.
 
-![Build Settings](/assets/images/posts/first-spigot-plugin/buildsettings.png)
+![Specifying Build Settings](/assets/images/posts/first-spigot-plugin/buildsettings.png)
 
-Next I filled out some of the required and optional plugin settings paying special attention ot the Minecraft Version setting as that will determine what API version I will need to refrence when creating my plugin.
+Subsequently, I filled out necessary and optional plugin settings, especially paying attention to the Minecraft Version setting, which determines the API version I needed to reference in crafting my plugin.
 
-![Settings](/assets/images/posts/first-spigot-plugin/settings.png)
+![Defining Settings](/assets/images/posts/first-spigot-plugin/settings.png)
 
-The only thing left was to give my project a local name and we're done!
+Lastly, I designated a local name for my project and that marked completion of this setup phase!
 
-![ProjName](/assets/images/posts/first-spigot-plugin/projname.png)
+![Naming the Project](/assets/images/posts/first-spigot-plugin/projname.png)
 
-Ahh. The glorious main class!
+Behold, the glorious main class!
 
-![The Main Class](/assets/images/posts/first-spigot-plugin/justcreated.png)
+![Displaying the Main Class](/assets/images/posts/first-spigot-plugin/justcreated.png)
 
-Now we need to set up the server to test this all on.
+The next step involves server setup for testing.
 
-## Step 3 Setting Up A Test Server
+## Step 3: Establishing A Test Server
 
-{/* TODO Add images and spice it up. */}
+For my testing servers, my preference leans towards Paper since it offers both speed and stability. Let's navigate to <Link href="https://papermc.io/downloads" text="papermc.io"/>, and download the version we defined earlier in the plugin settings - `1.19`.
 
-I like to run my testing servers on paper because it's fast and stable. So let's head on over to <Link href="https://papermc.io/downloads" text="papermc.io"/> and download the version we set earlier in the plugin settings. In this case it's `1.19`.
+We create a folder to host our Minecraft Server, and move the server.jar file into it. Make sure to remember the jar file's name as it will be required later.
 
-Next we'll create a folder to house our Minecraft Server and move the server jar file into it, keep a note of the name of the jar file as we'll need it later.
-
-Coming back to intellij navigate to;  
+Returning to IntelliJ, the path to navigate is:  
 `File > Project Structure > Artifacts > ➕ > JAR > From Modules With Dependencies...`
 
-Next we will type in the path to the Main Class which in this case is `dev.lerndmina.exampleplugin.ExamplePlugin` and click OK. The only other thing we need to change here is the Output directory. Set this to the plugins folder inside your Minecraft Server folder.
+We specify the path to the Main Class, which in this case is `dev.lerndmina.exampleplugin.ExamplePlugin` and affirm with OK. The final alteration here pertains to the Output directory, set this to the plugins folder inside your Minecraft Server folder.
 
-Alright, great!  
-Next we will add the settings which will make IntelliJ run the server for us so we only have to click one button to both build and run the plugin, handy right? Click on your currently listed build config and click edit configurations. Here's a handy little image to explain.
+Sounds easy, right?
 
-![Locate Edit Configurations](/assets/images/posts/first-spigot-plugin/editconfigurations-location.png)
+Next, we add the settings allowing IntelliJ to launch the server for us. With a single click, we can build and run the plugin. Navigate to your current build config and edit configurations.
 
-Create a new Jar Application by clicking `➕ > 📦 Jar Application` then give it a name.
+![Access Edit Configurations](/assets/images/posts/first-spigot-plugin/editconfigurations-location.png)
 
-_psst, just follow the stuff in the image & customise to your needs_
+A new Jar Application is created by clicking `➕ > 📦 Jar Application`, and providing a name for it.
+
+Take a quick look at the image below to follow the process and customize according to your needs.
 ![Jar Application Config](/assets/images/posts/first-spigot-plugin/JarApplicationConfig.png)
 
-After that go to the before launch section and click the ➕. Add the build artifact task we created earlier.
+Finally, by navigating to the 'before launch' section and clicking the ➕, the build artifact task we created earlier is added.
 
-Poof! Now with one button we can build our plugin and spin up a server to test it on!
+And Voila! With just one push of a button, we can build our plugin and spin up a server to test it. Not too daunting after all, right?
