--- a/src/content/blog/upgrading-to-3.0.mdx
+++ b/src/content/blog/upgrading-to-3.0.mdx
@@ -4,7 +4,7 @@ date: 2023-08-31
 author: Adam B
 image: "../../assets/images/headers/astro3.png"
 imageTitle: "Astro 3.0 header image, taken from Astro.build"
-description: Here's a template for a post, it's wonderful
+description: "I recently upgraded my website to Astro 3.0, here's how I did that."
 draft: false
 category: Personal
 ---
