--- a/src/content/blog/upgrading-to-3.0.mdx
+++ b/src/content/blog/upgrading-to-3.0.mdx
@@ -25,7 +25,7 @@ The first step to upgrade to Astro 3.0 was to update the dependencies in my pack
 
 
 ## View Transitions
-I decided to try out the new view transitions feature that Astro 3.0 introduced. View transitions allow you to create smooth animations between pages using the native CSS `@view-transition` rule. This feature is currently only supported by <Link href="https://shrt.zip/plFDv" text="Chromium browsers"/>, but Astro provides a fallback mechanism for other browsers (*This didn't end up working*). 
+I decided to try out the new view transitions feature that Astro 3.0 introduced. View transitions allow you to create smooth animations between pages using the native CSS `@view-transition` rule. This feature is currently only supported by <Link href="https://caniuse.com/mdn-api_viewtransition" text="Chromium"/>, but Astro provides a fallback mechanism for other browsers (*This didn't end up working*). 
 
 To add it to my website I imported the `viewtransitions` component from `astrojs/viewtransitions` into my global `Head.astro` component that I have on every page. I then added `<ViewTransitions />` to the bottom of the `Head.astro` component. Here's how that looks:
 
