--- a/src/content/blog/rsa-proj.mdx
+++ b/src/content/blog/rsa-proj.mdx
@@ -31,19 +31,19 @@ I want to stop this. Nobody should be in danger of death in their own home becau
 
 Any design I come up with needs to seamlessly integrate into the elderly person’s home. It must not look like an accessibility device, but something you’d want to have around and feel comfortable using. The idea is to have a simple wall unit in the shape of a cartoon style house with two buttons and a screen. This would, at a glance, allow the user to quickly determine the status of the heating in their home, adjusting it when necessary.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-mainuinit1-min.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-mainuinit1-min.png)
 
 When I was coming up with the idea I had a thought. Not everyone would want or be able to get up and walk over to their master control unit every time they needed to adjust the temperature. I decided to design a small, hand-held remote control. This would perform the same functionality as the master control unit fixed to the wall, allowing the user to indicate their preference in increasing or decreasing temperature and check the current ambient temperature.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-remote1-min.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-remote1-min.png)
 
 Further into my design I realised I would need to accommodate those with poor vision and so designed the buttons with tactile plus and minus insignia. The device safety feature would mean that the user could push the plus or minus button according to how they felt. If these pushes continued to request an ambient temperature into the “danger zone”, safe settings would be maintained and an outside authority would be notified. The situation could be investigated. The user would not be in a situation of being frustrated with the controller. They would think they were achieving what they felt they needed but help would be on the way.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-remote2buttons-min.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-remote2buttons-min.png)
 
 Somebody commented on my design for the wall plate that the LCD screen was not large enough. In fact the screen is approximately 10 cm across. Because I wanted a large device to go on the wall so it could be easily spotted the dimensions are bigger than might first be apparent.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-mainuinit2-min.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-mainuinit2-min.png)
 
 ## How did I make the design?
 
@@ -55,22 +55,22 @@ I obviously could not leave the house looking like boring white plastic. I navig
 
 To start making the buttons I added a cylinder, inserted a face and extruded to make the shape. I thought a depression in the centre would make it more interesting. I considered using Braille but decided this could be confusing for the elderly not familiar with this communication method. Instead I added tactile plus and minus shapes to the buttons. The buttons were coloured according to heat and cold, red and blue.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-house-edit.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-house-edit.png)
 
 ### Remote Control Design
 
 Starting with a UV sphere in edit mode. I turned on x-ray and removed the top half of the sphere. I stretched the half sphere to create an elongated oval-shape. I took inspiration from the Google Chromecast remote. This remote feels very comfortable in the hand, it is well designed ergonomically. Using the knife tool and the loop cut tool, I added geometry along the length of the remote. Rather than selecting the rim and creating one face, I took vertices directly across from each other and created an edge between them. Once I had a grid I was able to select squares in that grid and fill them in. This would allow me later to subdivide the geometry on the face giving me enough space to insert the screen.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-remote-geo.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-remote-geo.png)
 
 To match the design of the wall unit, I opened the shading workspace and created a green material for the main body. Next, I had to decide where the screen was going to go. I placed it towards the rear middle of the remote. This allowed the buttons to be located towards the front of the remote. When the remote is settled in the palm of the hand the buttons are easily accessible by the thumb. I textured the LCD with the same black material I used on the wall unit. To finish off, I created the buttons by making a cylinder and applying a subdivision surface modifier to it. I used loop cuts to exemplify the angles I wanted to be smooth rather than non-existent, otherwise the modifier would turn it into a spike.
 
-![](/assets/images/posts/rsa-proj/proj-rsa-remote-button.png)
+![](../../assets/images/posts/rsa-proj/proj-rsa-remote-button.png)
 
 To make the black dot denoting the infrared emitter on the remote control, I selected the geometry that was going to be black and applied the LCD screen material to it. That had the same kind of reflectivity I was looking for.
 
 _Final Render of The Remote_
-![](/assets/images/posts/rsa-proj/remote-final.png)
+![](../../assets/images/posts/rsa-proj/remote-final.png)
 
 _Final Wall Unit Render_
-![](/assets/images/posts/rsa-proj/house-final.png)
+![](../../assets/images/posts/rsa-proj/house-final.png)
