--- a/src/content/blog/template.mdx
+++ b/src/content/blog/template.mdx
@@ -2,7 +2,7 @@
 title: TITLE HERE
 date: 2000-01-01
 author: Adam B
-# image: "../../assets/images/headers/hq-background.png"
+image: "../../assets/images/headers/hq-background.png"
 description: Here's a template for a post, it's wonderful
 draft: true
 category: Personal
